<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente_colores"
    tools:context=".RegistroUsuario">


    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:backgroundTint="@color/pink_dark"
        android:text="@string/btn_crearCuenta"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btnGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:backgroundTint="@color/pink_dark"
        android:text="@string/btn_google"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="142dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/et_contraseña"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="142dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/et_usuario"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_registro"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_contraseña"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/txtview_contraseña"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_correo"
        app:layout_constraintEnd_toStartOf="@+id/etPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_usuario"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="28dp"
        android:gravity="center"
        android:text="@string/txtview_usuario"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_contraseña"
        app:layout_constraintEnd_toStartOf="@+id/etUsuario"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_registro"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/tv_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_registro"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/tv_correo"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="28dp"
        android:gravity="center"
        android:text="@string/tv_correo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_telefono"
        app:layout_constraintEnd_toStartOf="@+id/etCorreo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contraseña"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="142dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/et_correo"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434" />

    <TextView
        android:id="@+id/tv_telefono"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="28dp"
        android:gravity="center"
        android:text="@string/tv_telefono"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etTelefono"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="142dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/et_telefono"
        android:inputType="phone"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_telefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557" />

    <EditText
        android:id="@+id/etDireccion"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="142dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/et_direccion"
        android:inputType="textPostalAddress"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCrearCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTelefono"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_direccion"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="28dp"
        android:gravity="center"
        android:text="@string/tv_direccion"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etDireccion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_telefono"
        app:layout_constraintVertical_bias="0.173" />


</androidx.constraintlayout.widget.ConstraintLayout>